# backend/src/controllers/ServiceController.ts
@@ -1,7 +1,7 @@
 import { GET, POST,  Path, QueryParam } from "typescript-rest";
 import { Produces, Response } from "typescript-rest-swagger";
 import { BadRequestError } from "typescript-rest/dist/server/model/errors";
-import { exampleInsertThing, exampleRetrieveThing, genericObject } from "../Mongo";
+import { exampleInsertThing, exampleRetrieveThing, genericObject, correctLogin } from "../Mongo";
 
 const badRequestExampleResponse: BadRequestError = {
     name: "BadRequestError",
@@ -39,4 +39,16 @@ export class ServiceController
      {
          return await exampleInsertThing(test);
      }
+	 
+	 /**
+	  * @param username:string - username entered into login page
+	  * @param password:string - password entered into login page (clear text no encryption)
+	  * @returns 1 if username, password pair in db. otherwuse returns 0 (str character 1, 0)
+	 **/
+	 @Path("/testGetDb")
+	 @GET
+	 public async testDBGet(@QueryParam("username") username: string, @QueryParam("password") password: string)
+    {
+        return await correctLogin(username, password);
+	 }
 }
