# backend/src/swagger/swagger.json
@@ -120,6 +120,42 @@
 					}
 				]
 			}
+		},
+		"/testGetDb": {
+			"get": {
+				"operationId": "ServiceTestDBGet",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "Bad Request",
+						"schema": {
+							"$ref": "#/definitions/BadRequestError"
+						}
+					}
+				},
+				"description": "",
+				"parameters": [
+					{
+						"description": ":string - username entered into login page",
+						"in": "query",
+						"name": "username",
+						"required": true,
+						"type": "string"
+					},
+					{
+						"description": ":string - password entered into login page (clear text no encryption)",
+						"in": "query",
+						"name": "password",
+						"required": true,
+						"type": "string"
+					}
+				]
+			}
 		}
 	},
 	"swagger": "2.0",
